# infobip-api-rust-sdk

./: .cspell.json  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.tpl  build.rs
.github/workflows/: publish-to-crates.yml  rust.yml
src/: lib.rs
src/api/: email.rs  mod.rs  sms.rs  whatsapp.rs
src/api/tests/: email.rs  mod.rs  sms.rs  whatsapp.rs
src/client/: configuration.rs  mod.rs
src/configuration/: mod.rs
src/model/: email.rs  mod.rs  sms.rs  whatsapp.rs
src/model/tests/: email.rs  mod.rs  sms.rs  whatsapp.rs
tests/: email.rs  sms.rs  whatsapp.rs
