[package]
authors = ["Infobip DevRel devrel@infobip.com"]
description = "Client SDK to use the Infobip API with pure Rust."
documentation = "https://www.infobip.com/docs/api"
edition = "2021"
homepage = "https://www.infobip.com/"
license = "MIT OR Apache-2.0"
name = "infobip_sdk"
repository = "https://github.com/infobip-community/infobip-api-rust-sdk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.6"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
httpmock = "0.6"

[features]
default = ["sms", "whatsapp"]
sms = []
whatsapp = []
