[package]
authors = ["Infobip DevRel devrel@infobip.com"]
description = "Client SDK to use the Infobip API with pure Rust."
documentation = "https://www.infobip.com/docs/api"
edition = "2021"
homepage = "https://www.infobip.com/"
license = "Apache-2.0 OR MIT"
name = "infobip_sdk"
repository = "https://github.com/infobip-community/infobip-api-rust-sdk"
version = "0.6.0"
rust-version = "1.63"

[dependencies]
lazy_static = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7"
chrono = "0.4"

[build-dependencies]
rustc_version = "0.4"

[features]
default = ["sms", "whatsapp", "email"]
sms = []
whatsapp = []
email = []
