[package]
authors = ["Infobip DevRel devrel@infobip.com"]
description = "Client SDK to use the Infobip API with pure Rust."
documentation = "https://www.infobip.com/docs/api"
edition = "2021"
homepage = "https://www.infobip.com/"
license = "Apache-2.0 OR MIT"
name = "infobip_sdk"
repository = "https://github.com/infobip-community/infobip-api-rust-sdk"
version = "0.6.0"
rust-version = "1.63"

[features]
default = ["sms", "whatsapp", "email", "reqwest/default-tls"]
# Adds support for sending email.
email = []
# Adds support for SMS.
sms = []
# Adds support for sending WhatsApp messages.
whatsapp = []
# See https://docs.rs/reqwest/latest/reqwest/#optional-features
## Enables TLS functionality provided by `native-tls`.
native-tls = ["reqwest/native-tls"]
## Enables the `vendored` feature of `native-tls`.
native-tls-vendored = ["reqwest/native-tls-vendored"]
# Enables the `alpn` feature of `native-tls`.
#native-tls-alpn = [ "reqwest/native-tls-alpn" ]
## Enables TLS functionality provided by `rustls`. Equivalent to `rustls-tls-webpki-roots`.
rustls-tls = ["reqwest/rustls-tls"]
## Enables TLS functionality provided by `rustls`, without setting any root certificates. Roots have to be specified manually.
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
## Enables TLS functionality provided by `rustls`, while using root certificates from the `webpki-roots` crate.
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enables TLS functionality provided by `rustls`, while using root certificates from the `rustls-native-certs` crate.
#rustls-tls-native-roots = [ "reqwest/rustls-tls-native-root" ]

[dependencies]
document-features = "0.2"
lazy_static = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
chrono = "0.4"
httpmock = "0.7"

[build-dependencies]
rustc_version = "0.4"
